--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,17 +1,15 @@
 ---
-
 galaxy_info:
   role_name: fedora_releases
   description: fedora_releases role
   issue_tracker_url: https://github.com/escapace/ansible-fedora_releases/issues
   author: escapace
   license: Apache-2.0
-  min_ansible_version: 2.10
-  github_branch: trunk
+  min_ansible_version: "2.13"
   platforms:
     - name: EL
       versions:
-        - 9
+        - "9"
 
   galaxy_tags:
     - escapace
